Enhance sales order and UAD management with new features. Added invoice calculation preview in the UAD creation page, including detailed breakdowns and proration calculations. Updated sales order detail page to display line items and improved UI for invoice expansion. Refactored utility functions for better cycle date calculations and proration logic. Removed obsolete test-db.js file and updated package.json with new test scripts.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "test:invoices": "node run-invoice-tests.js",
+    "test:calculations": "node test-invoice-calculations.js"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
